deploy/kubernetes/king-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kingfisher-system
