deploy/kubernetes/king-kf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: king-kf
  name: king-kf
  namespace: kingfisher-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: king-kf
  template:
    metadata:
      labels:
        app: king-kf
    spec:
      containers:
      - image: openkingfisher/king-kf:latest
        name: king-kf
        ports:
        - containerPort: 8080
          name: http
        livenessProbe: 
          tcpSocket: 
            port: 8080
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe: 
          tcpSocket: 
            port: 8080
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: 1
            memory: 1G
          requests:
            cpu: 512m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: king-kf
  namespace: kingfisher-system
spec:
  ports:
  - name: king-kf
    port: 8080
    targetPort: 8080
  selector:
    app: king-kf
  sessionAffinity: ClientIP
