deploy/kubernetes/king-rabbitmq.yaml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "king-rabbitmq"
  namespace: "kingfisher-system"
  labels:
    app: "king-rabbitmq"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "king-rabbitmq"
  template:
    metadata:
      labels:
        app: "king-rabbitmq"
    spec:
      containers:
      - name: "king-rabbitmq"
        image: "rabbitmq:3-management"
        ports:
        - containerPort: 15672
          protocol: "TCP"
        - containerPort: 5672
          protocol: "TCP"
        livenessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          tcpSocket:
            port: 5672
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "king-rabbitmq"
  namespace: "kingfisher-system"
spec:
  ports:
  - name: "manage"
    protocol: "TCP"
    port: 15672
    targetPort: 15672
  - name: "server"
    protocol: "TCP"
    port: 5672
    targetPort: 5672
  selector:
    app: "king-rabbitmq"
